// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccountGate loading > matches the snapshot while loading 1`] = `
<div
  class="mx-auto max-w-3xl px-4 py-10"
>
  <p
    class="text-sm text-slate-600"
    role="status"
  >
    Loading your account…
  </p>
</div>
`;

exports[`AccountGate on a failure that is not the session > matches the snapshot on a failure 1`] = `
<div
  class="mx-auto max-w-3xl px-4 py-10"
>
  <p
    class="rounded-box border px-3 py-2 text-sm border-app-error/40 bg-app-error/10 text-app-error"
    role="alert"
  >
    Database unavailable
  </p>
</div>
`;
